# hh4b-transformer

./: .gitignore  .pre-commit-config.yaml  LICENSE  PLAN.md  README.md  environment.yml  pyproject.toml  requirements.txt
configs/: README.md  data.yaml  export.yaml  features.yaml  model.yaml  train.yaml
docs/: overview.md
kube/: hh4b-vol.yml
registry/: README.md  models.json
scripts/: nautilus_submit.sh
src/hh4b_transformer/: __init__.py  eval.py  train.py
src/hh4b_transformer/data/: dataset.py  hh4b_loader.py
src/hh4b_transformer/features/: build.py  selection.py
src/hh4b_transformer/models/: export.py  infer.py  transformer.py
tests/: README.md  test_imports.py
tests/unit/models/: transformer.py
